Allow enter to be used on Actor Importer form Set placeholder text for each language to give an example character Hide Actor Importer debug message behind CONFIG.debug.CoC7Importer check Prevent importing Actor if textarea is empty Fix CoC7.ImportedUnnamedCharacter key Add Actor Import trigger to bottom of actor directory

--- a/styles/interface/compendium.less
+++ b/styles/interface/compendium.less
@@ -1,4 +1,4 @@
-a.compendium-translation {
+#sidebar a.compendium-translation, #sidebar a.actor-import {
   border-top: 2px groove #444;
   padding-top: 4px;
   font-size: 20px;
